# ECED3901-Competition-2024

./: README.md  package.xml  setup.cfg  setup.py
arduino/switch_sketch/: switch_sketch.ino
eced3901_competition_2024/: competition_publisher.py  pose_listener.py  test_student.py  test_student_with_switch.py
launch/: demo.launch.py  team_11_launch.py  team_15_launch.py
services/: example.service  robot_startup_11.service  robot_startup_15.service
